<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_movie">

    <fragment
        android:id="@+id/navigation_movie"
        android:name="com.reindra.moviecatalogue.fragment.FragmentMovie"
        android:label="@string/tab_text_1"
        tools:layout="@layout/fragment_fragment_movie" />

    <fragment
        android:id="@+id/navigation_tv"
        android:name="com.reindra.moviecatalogue.fragment.FragmentTvShow"
        android:label="@string/tab_text_2"
        tools:layout="@layout/fragment_fragment_tv_show" />

    <fragment
        android:id="@+id/navigation_favourite"
        android:name="com.reindra.moviecatalogue.fragment.FragmentFavorite"
        android:label="@string/tab_text_3"
        tools:layout="@layout/fragment_favourite" />
</navigation>