<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" xmlns:card_view="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/white"
    android:paddingTop="4dp"
    android:paddingBottom="@dimen/margin_padding_4dp"
    >

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_item_movie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:transitionName="container"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        app:cardMaxElevation="4dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/imgposter"
                android:layout_width="300dp"
                android:layout_height="250dp"
                android:scaleType="fitXY"
                android:layout_gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/img_placeholder"
                android:transitionName="illusration"
                android:layout_alignParentEnd="true"
                app:riv_corner_radius="5dp"/>
            <TextView
                android:id="@+id/tvjudul"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:maxLines="1"
                android:text="@string/title"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_score_movie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4dp"
                    android:fontFamily="@font/exo"
                    android:textColor="@color/blackSoft"
                    android:textSize="14sp" />

                <androidx.appcompat.widget.AppCompatRatingBar
                    android:id="@+id/rb_score_movie"
                    style="@style/Widget.AppCompat.RatingBar.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="2dp"
                    android:numStars="5"
                    android:rating="3.23"
                    android:stepSize="0"
                    android:theme="@style/RatingBar" />

                <TextView
                    android:id="@+id/tvdate_movie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_vertical_margin"
                    android:layout_marginRight="@dimen/activity_vertical_margin"
                    android:maxLines="2"
                    android:text="@string/description"
                    android:textColor="@color/white"
                    android:visibility="invisible" />

            </LinearLayout>


            <TextView
                android:id="@+id/tv_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:ellipsize="end"
                android:justificationMode="inter_word"
                android:maxLines="4"
                android:text="@string/description"
                 />

            <LinearLayout
                android:id="@+id/img_favorite"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="end"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="@dimen/margin_padding_8dp"
                android:background="@drawable/bg_rounded_gradient"
                android:backgroundTint="@color/colorBacground"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_heartmovie"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginTop="2dp"
                    android:contentDescription="@string/desc_ic_heart"
                    android:src="@drawable/ic_heart"
                    android:tint="@color/grey" />

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
